# PPOPS

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  concrete_requirement.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/calibration/: manually_extracted_points.txt
docs/source/: 01_example_usage.ipynb  changelog.rst  conf.py  index.rst  mie_theory.md
docs/src/: conf.py
profiling/: OPS_profile_data.prof  OPS_profile_data_baseline.prof  OPS_profile_data_simpson.prof  OPS_profile_data_vectorized_phi.prof  OPS_profile_data_vectorized_phi_theta.prof  profile_OPS.py
src/: OPS.py  __init__.py  detector.py  main.py
src/ppops/: OPS.py  __init__.py  detector.py  geometry.py  mie_modules.py  mirror.py
src/ppops/calibration/: __init__.py  load_peak_file.py
tests/: test_OPS.py  test_detector.py  test_geometry.py  test_miepython.py  test_scattering.py
validation/: mie_modules.py  validate_mie.py
